--- a/bootstrap-scripts/production/volume-config.yaml
+++ b/bootstrap-scripts/production/volume-config.yaml
@@ -44,6 +44,7 @@ classes:
 instances:
   hadoop-dn: datanode
   build: generic
+  gateway: generic
   hadoop-cm: generic
   hadoop-edge: generic
   hadoop-mgr-1: generic
